--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,29 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>{{title}}</title>
+    <!-- Agrega enlaces a los archivos de estilos CSS de Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="text-center">{{title}}</h1>
+      <div class="position-relative">
+        <img src="/images/cinema.jpg" alt="Imagen de inicio" class="img-fluid">
+        <div class="overlay">
+          <a href="/movies" class="btn btn-primary">Explorar películas</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Agrega enlaces a los archivos de scripts JS de Bootstrap -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  </body>
+</html>
+
+    
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  </body>
+</html>
+
